# instantly-cli

./: CLAUDE.md  CUsersDanielSourceReposinstantly-cliunread_interested.json  README.md  SKILL.md  pyproject.toml  tmp_reply.html
.claude/: settings.local.json
instantly/: cli.py  client.py
instantly/commands/: campaigns.py  emails.py  leads.py
instantly_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: free_demo_3_investors.md  pricing_structure.md  short_summary.md
