[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instantly-cli"
version = "0.1.0"
description = "CLI for the Instantly API v2"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "requests>=2.31",
]

[project.scripts]
instantly = "instantly.cli:app"
